fix(docs/install/zalo-pc.mdx): update grid layout classes to use Bootstrap grid classes for better responsiveness feat(docs/install/zalo-pc.mdx): add support for process.env.PORT environment variable to be able to run app on a configurable port fix(docs/install/zalo-web.mdx): add tip about automatic updates for ZaDark on browsers fix(docs/intro.mdx): update image styling to center align ZaDark Screenshot fix(src/components/card-install/index.tsx): update button classes for better styling and alignment fix(src/components/cards-install-web/index.tsx): update grid layout classes to use Bootstrap grid classes for better responsiveness fix(src/css/custom.css): update button hover color for better visibility

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,26 +56,16 @@
   border-bottom-left-radius: 0;
 }
 
+.button--outline:hover {
+  --ifm-button-color: #fff;
+}
+
 .w-full {
   width: 100%;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .gap-4 {
   gap: 1rem;
-}
-
-.grid {
-  display: grid;
-}
-
-@media (min-width: 640px) {
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2,minmax(0,1fr));
-  }
 }
 
 div[class^=announcementBar_] .close {
